fix vertical alignment of topbar dropdowns

--- a/app/sass/platform/_dropdowns.scss
+++ b/app/sass/platform/_dropdowns.scss
@@ -67,7 +67,7 @@ $dropShadow:0 2px 2px 0 rgba(0, 0, 0 , 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
 		height:48px;
 		display: flex;
 		justify-content: center;
-		align-items: baseline;
+		align-items:flex-start;
 		@include rgba(0, 0, 0, 0.87);
 
 		span{
